--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,25 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+li {
+  display: flex;
+  list-style: none;
+  margin-bottom: 10px;
+  font-size: 25px;
+  align-items: center;
+}
+
+img {
+  width: 70px;
+  height: auto;
+  margin-right: 20px;
+}
+
+h1 {
+  display: inline;
+  font-size: 40px;
+}
+p {
+  font-size: 20px;
+}
